base/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres-port
      targetPort: 5432
  clusterIP: None
  selector:
    app: postgres
