base/todo_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8088
