base/todo_backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  type: LoadBalancer
  selector:
    app: todo-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3055
